# frajola

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.claude/skills/: product-designer
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  GIT_INTEGRATION_PRD.md  PRD.md  RELEASES.md  TECH_RESEARCH.md
site/: changelog.html  index.html  next-features.html
site/css/: animations.css  base.css  blocks.css  docs.css  landing.css  roadmap.css  tokens.css
site/docs/: index.html
site/js/: animations.js  docs-nav.js  nav.js  (+1 more)
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_onboarding.sql  003_dictation.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  mod.rs  ollama.rs  openai.rs  prompts.rs  types.rs
src-tauri/src/audio/: capture.rs  devices.rs  encoder.rs  mod.rs  state.rs
src-tauri/src/commands/: ai.rs  dictation.rs  meetings.rs  mod.rs  overlay.rs  recording.rs  settings.rs  transcribe.rs
src-tauri/src/db/: connection.rs  dictation.rs  meetings.rs  migrations.rs  mod.rs  settings.rs  summaries.rs  transcript.rs
src-tauri/src/dictation/: apple_speech.rs  frontmost_app.rs  mic_level.rs  mod.rs  processor.rs  state.rs  text_injector.rs
src-tauri/src/system/: meeting_detector.rs  mod.rs
src-tauri/src/transcribe/: mod.rs  model.rs  resample.rs  whisper.rs
src-tauri/swift-bridge/: DictSpeechBridge.swift
src-tauri/tests/: dictation_integration.rs
(+38 files in other folders)
