[package]
name = "frajola"
version = "0.1.0"
description = "Privacy-first meeting recorder"
authors = ["Victor Lucas"]
license = "MIT"
repository = "https://github.com/victorlucss/frajola"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "frajola_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rusqlite = { version = "0.38", features = ["bundled", "vtab"] }
rusqlite_migration = "2"
thiserror = "2"
cpal = { git = "https://github.com/RustAudio/cpal.git", branch = "master" }
hound = "3.5"
whisper-rs = "0.13"
rubato = "0.16"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync"] }
